--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "dependencies": {
         "axios": "^0.21.4",
         "express": "^4.18.1"
+    },
+    "engines": {
+        "node": ">=16.15.1"
     }
 }
