--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "type": "module",
     "dependencies": {
         "axios": "^0.21.4",
+        "dotenv": "^16.0.1",
         "express": "^4.18.1"
     },
     "engines": {
